log
Fri Mar 18 14:31:15 UTC 2022: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
41c8a01
Fri Mar 18 14:42:12 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|5
total_score: 15/70
4a230e8
Fri Mar 18 14:42:54 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0079ed2
Fri Mar 18 14:44:24 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
be552ce
Fri Mar 18 14:46:02 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
76a864a
Fri Mar 18 14:46:16 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
87c355a
Fri Mar 18 14:46:47 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
879e7cd
Fri Mar 18 15:00:32 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:77:27: error: expected expression before ‘void’
   Node* nodo_= createNode(void* data);
                           ^~~~
list.c:77:9: error: variable ‘nodo_’ set but not used [-Werror=unused-but-set-variable]
   Node* nodo_= createNode(void* data);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
29f1ff1
Fri Mar 18 15:00:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:77:9: error: variable ‘nodo_’ set but not used [-Werror=unused-but-set-variable]
   Node* nodo_= createNode(data);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e58e975
Fri Mar 18 15:05:53 UTC 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4ee60b6
Fri Mar 18 15:06:32 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
f6d87cc
Fri Mar 18 15:07:31 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60ebc84
Fri Mar 18 15:09:49 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
21783f8
Fri Mar 18 15:10:49 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2a38e5e
Fri Mar 18 15:12:02 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
aa537f0
Fri Mar 18 17:07:54 UTC 2022: 
 list.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  10|2
total_score: 45/70
db35726
Sat Mar 19 14:10:00 UTC 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
87fb931
Sat Mar 19 14:12:22 UTC 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
96a885d
Sat Mar 19 14:14:07 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e2d4ca3
Sat Mar 19 14:14:42 UTC 2022: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  10|2
total_score: 45/70
abc57f6
Sat Mar 19 16:26:02 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
ba7b847
Sat Mar 19 16:27:41 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
ee770c3
Sat Mar 19 16:27:58 UTC 2022: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
e262462
Sat Mar 19 16:33:15 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
350728b
Sat Mar 19 16:35:58 UTC 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:108:5: error: expected ‘;’ before ‘nodo’
     nodo -> prev  = list -> current;
     ^~~~
Compilation failed
ee6eb1f
Sat Mar 19 16:37:01 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
93893d6
Sat Mar 19 18:37:40 UTC 2022: 
 list.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|0
062d77f
Sat Mar 19 21:21:04 UTC 2022: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:155:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
e8346ec
Sat Mar 19 21:22:43 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2841f0f
